# Thermal_server

./: .gitignore  README.md  mavlink_test.py
src/check_status/: CMakeLists.txt  README.md  package.xml
src/check_status/check_status_py/: error_code.py  tools.py
src/check_status/launch/: launch_all_check.launch.py
src/check_status/scripts/: check_UpS_status.py  check_drone_status.py  check_status_node.py  check_thermal_camera.py  get_status_node.py  mavlink_test_node.py  send_fire_alert.py  test.py
src/launch_all/: CMakeLists.txt  package.xml
src/launch_all/launch/: launch_all.launch.py  launch_check_status.launch.py  launch_detect_fire.launch.py
src/thermal_camera2world/: CMakeLists.txt  package.xml
src/thermal_camera2world/config/: camera2world _ds4025ft.yaml  camera2world copy.yaml  camera2world.json  camera2world.yaml  camera2world.yml  camera2world_robot.yaml  distortion_exp.yaml  undistortion_exp.yaml
src/thermal_camera2world/launch/: all_camera_launch.launch.py  camera2world.launch.py  launch_all_camera.launch.py  thermal_ds4025ft_cam2world.launch.py  thermal_ds4025ft_setup_camera2world_point.launch.py  thermal_ipt430m_cam2world.launch.py  thermal_ipt430m_setup_camera2world_point.launch.py  uwb_experiment_ds.launch.py  uwb_experiment_ipt.launch.py
src/thermal_camera2world/scripts/: caculate_mse.py  camera_calibration_chess.py  camera_calibration_circle.py  clibration_compare.py  compare_theramlAlert.py  compare_thermalAlert.py  draw_data.py  read_robot_laser_back.py  setup_camera2world_point.py  setup_world_coordinate.py  test_thermal_camera2world.py  thermal_camera2world.py  thermal_camera2world_old_code.py  uwb_experiment.py
src/thermal_ds4025ft/: CMakeLists.txt  package.xml
src/thermal_ds4025ft/doc/: .~lock.云台、球机、枪机等在线设备切换热图格式操作方法v1.1-2023.10.12.docx#  .~lock.红外数据文件格式(DLT-664).docx#  云台、球机、枪机等在线设备切换热图格式操作方法v1.1-2023.10.12.docx  云台、球机、枪机类设备_HTTP协议开发_FAQ V1.0_2023.10.22.docx
src/thermal_ds4025ft/launch/: thermal_ds4025ft.launch.py
src/thermal_ds4025ft/scripts/: DS4025FT_ros2_node.py  Thermal_DS4025FT.py  rrr.py  test_code.py  test_heatmap.py  test_thermal_ds4025ft.py  解析Heatmap.cpp
src/thermal_ds4025ft/thermal_ds4025ft/: ds4025ft.py  module_to_import.py
src/thermal_gui/: CMakeLists.txt  package.xml
src/thermal_gui/scripts/: py_node.py  test_AutoFocusNode.py
src/thermal_gui/thermal_gui/: module_to_import.py
src/thermal_im4/: CMakeLists.txt  package.xml
src/thermal_im4/include/thermal_im4/: SgpApi.h  SgpParam.h
src/thermal_im4/lib/: libavdevice.so.58.8.100  libavfilter.so.7.57.100  libavformat.so.58.29.100  libavutil.so.56.31.100  libswresample.so.3.5.100  libswscale.so.5.5.100  libusb-1.0.so.0.1.0  libusb-1.0.so.0.2.0
src/thermal_im4/src/: test_thermal_im4_node.cpp
src/thermal_ipt430m/: CMakeLists.txt  package.xml
src/thermal_ipt430m/include/thermal_ipt430m/: SgpApi.h  SgpParam.h
src/thermal_ipt430m/launch/: thermal_ipt430m.launch.py
src/thermal_ipt430m/lib/: GuiderApiTest  config.ini  libPocoFoundation.so.64  libPocoJSON.so.64  libPocoNet.so.64  libPocoUtil.so.64  libPocoXML.so.64  libavdevice.so.58.8.100  libavfilter.so.7.57.100  libavformat.so.58.29.100  libavutil.so.56.31.100  libcrypto.so.1.0.0  libpostproc.so.55.5.100  libswresample.so.3.5.100  libswscale.so.5.5.100  libx264.so.164  log_conf.properties  run.sh
src/thermal_ipt430m/src/: IPT430M_ros2_node.cpp
src/thermal_msgs/: CMakeLists.txt  package.xml
web_server/: ctrl_center_server.py  drone.db  drone_raw_data.db  drone_status.txt  flask_test.py  get_drone_status.py  mavlink_test.py  send_server.py
web_server/static/: styles.css
web_server/templates/: index.html  test.html  update.html
web_server/utils/: database.py  tools.py
